--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 fastapi==0.89.0
-uvicorn==0.20.0
-websockets==10.4
+uvicorn[standard]==0.20.0
+pytest==7.2.0
 Jinja2==3.1.2
 httpx==0.23.3
-beautifulsoup4==4.11.1
-pytest==7.2.0
